<resources>
    <string name="app_name">LoginProfileApp</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
</resources>